the first step in my career

--- a/index.html
+++ b/index.html
@@ -3,7 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/assest/css/reset.css" />
+    <link rel="stylesheet" href="./assest/css/main.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="header-fixed">
+        <img
+          src="assest/img/7900c8fd35ac4d36948ea0be219ef38b-free.png"
+          alt=""
+          class="logo"
+        />
+        <!-- nav -->
+        <div class="navbar">
+          <ul class="nav">
+            <li class="active">
+              <a href="">Home</a>
+            </li>
+            <li><a href="">Course</a></li>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Reviews</a></li>
+          </ul>
+        </div>
+        <!-- button -->
+        <div class="btn_action">
+          <a href="" class="btn btn-sign_up">Sign up</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
